--- a/enhanced-form.html
+++ b/enhanced-form.html
@@ -69,7 +69,7 @@
       <h2>Featured Media</h2>
 
       <figure>
-        <img src="https://via.placeholder.com/300x200" alt="Placeholder image of HTML code" width="300">
+        <img src="https://images.pexels.com/photos/2085831/pexels-photo-2085831.jpeg" alt="Placeholder image of HTML code" width="300">
         <figcaption>Figure 1: Example of semantic HTML code.</figcaption>
       </figure>
 
@@ -79,7 +79,7 @@
       </audio>
 
       <video width="320" height="240" controls>
-        <source src="sample-video.mp4" type="video/mp4">
+        <source src="./animal.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </section>
